# anding-cctv-relay

./: .env.example  .gitignore  README.md  docker-compose.yaml
cctv-worker/: .env.example  .gitignore  API_CONTRACT.md  Dockerfile  README.md  pyproject.toml  requirements.txt
cctv-worker/scripts/: download_model.py  entrypoint.sh  test_detection.py
cctv-worker/src/: __init__.py  auto_detect_seats.py  check_stream_quality.py  debug_channel_16.py  run_detection_all.py  visualize_polygon.py
cctv-worker/src/api/: debug_stream.py  roi_config_api.py  seats_api.py
cctv-worker/src/api/static/: dashboard.html  index.html
cctv-worker/src/config/: __init__.py  constants.py  settings.py
cctv-worker/src/core/: __init__.py  detector.py  roi_matcher.py
cctv-worker/src/database/: __init__.py  database.py  models.py  seat_repository.py  supabase_client.py
cctv-worker/src/scripts/: import_gosca_seats.py  sync_roi_to_db.py
cctv-worker/src/utils/: __init__.py  detection_logger.py  gosca_client.py  logger.py  multi_store_manager.py  rtsp_client.py
cctv-worker/src/workers/: __init__.py  detection_worker.py
cctv-worker/tests/: conftest.py  test_all_channels.py  test_constants.py  test_polygon_detection.py  test_roi_matcher.py  test_rtsp.py  test_rtsp_quality.py  test_seat_detection.py  test_yolo.py
docs/: 01-hardware.md  02-ubuntu-setup.md  03-go2rtc.md  04-cloudflare-tunnel.md  05-cctv-worker.md  06-admin-web.md  07-operations.md  08-troubleshooting.md  09-windows-wsl2-setup.md  10-multi-store.md  11-supabase-deployment.md  12-streaming-guide.md  99-learning-resources.md
(+12 files in other folders)
